--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "socy-mongo-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "MongoDB backend challenge",
   "main": "index.js",
   "scripts": {
     "start": "node index",
